[project]
name = "rsna-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies=[
  "torch==2.1.2",
  "torchvision",
  "torchaudio",
  "zarr==3.1.0",
  "numpy==1.26",
  "marimo>=0.15.2",
  "einops>=0.8.1",
  "pandas>=2.3.1",
  "fastparquet>=2024.11.0",
  "nibabel>=5.3.2",
  "pydicom>=3.0.1",
  "tqdm>=4.67.1",
  "openai>=1.98.0",
  "matplotlib>=3.10.5",
  "rich>=14.1.0",
  "altair>=5.5.0",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu111"
explicit = true
